# bilingual-section-classifier

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DECISIONS.md  ROADMAP.md
src/: __init__.py  labels.py
tests/: test_labels.py
