[project]
name = "bilingual-section-classifier"
version = "0.0.1"
description = "Fine-tuned XLM-RoBERTa for English + French scientific paper section classification."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Aboubekrin Mohamed Salem" }
]
dependencies = [
    # Core ML stack
    "torch>=2.5,<3",
    "transformers>=4.45,<5",
    "datasets>=3,<4",
    "accelerate>=1,<2",
    "sentencepiece>=0.2",
    "scikit-learn>=1.5,<2",
    # Experiment tracking
    "wandb>=0.18,<1",
    # Demo
    "gradio>=5,<6",
    # Data prep — French HAL scrape, PDF extraction
    "pypdf>=5,<6",
    "beautifulsoup4>=4.12,<5",
    "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
